Accessibility v1.6.2 - Talkback - My care now  - Pharmacy - toast message disappears before it announces complete text is fixed, converting all the toast messages for the accessibility. till now done in 83 places and about to replace remaining 40+ places.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -229,7 +229,7 @@
     <string name="insurance_phone_number_invalid">Invalid insurance Phone Number</string>
     <string name="phone_number_invalid">Invalid phone number</string>
     <string name="email_invalid">Invalid email</string>
-    <string name="zip_invalid">Invalid zipcode</string>
+    <string name="zip_invalid">Invalid zip code</string>
 
     <!--Enrollment-->
     <string name="password_must_be_eight_chars">Must be at least 8 characters</string>
@@ -570,4 +570,15 @@
     <string name="appointment_confirmed">Appointment Confirmed</string>
     <string name="unable_to_book">Unable to book</string>
     <string name="review_your_booking">Review your booking</string>
+    <string name="you_must_chose_an_environment">You must chose an environment</string>
+    <string name="please_provide_user_for_AmWell">Please provide a user for AmWell</string>
+    <string name="no_medical_conditions">No Medical Conditions found. \\n\\nWe could\'nt find any relevant results for </string>
+    <string name="no_medical_allergies">No Medical Allergies found. \\n\\nWe could\'nt find any relevant results for </string>
+    <string name="visit_report_not_available">Visit report not available!</string>
+    <string name="pulling_up_visit_summary_failed_message">Sorry, Pulling up visit summary has failed. Please try again at later time</string>
+    <string name="your_cost_is_not_free">Your cost isn\'t free\\nYou might want to apply a coupon...</string>
+    <string name="provider_unavailable">Provider unavailable \\nPlease select a different provider.</string>
+    <string name="unable_to_add_message">Sorry we are unable to add at this time.</string>
+    <string name="no_pharmacies_found_for">No Pharmacies found. \\n\\nWe could\'nt find any relevant results for</string>
+    <string name="no_pharmacies_found_for_current_location">No Pharmacies found. \\n\\nWe could\'nt find any relevant results near to your current location.</string>
 </resources>
