Fixed #28527: We now distinguish between Providers that are "Offline" and Providers that are "Busy"

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -574,4 +574,6 @@
     <string name="appointment_confirmed">Appointment Confirmed</string>
     <string name="unable_to_book">Unable to book</string>
     <string name="review_your_booking">Review your booking</string>
+    <string name="offline">Offline</string>
+    <string name="busy">Busy</string>
 </resources>
