Completed 29692: Android: Copy - Landing page body. "Video visits are a convenient way... questions answered" is replaced with “Video visits are a convenient way to see a doctor from home”

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -449,7 +449,7 @@
 
     <!--TechCheck-->
     <string name="welcome">Welcome!</string>
-    <string name="mycare_desc">Video visits are a convenient way to get immediate care and questions answered.</string>
+    <string name="mycare_desc">Video visits are a convenient way to see a doctor from home.</string>
     <string name="get_started">Get Started</string>
     <string name="personal_information">Personal Information</string>
     <string name="my_personal_information">Personal Information</string>
