--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -491,6 +491,8 @@
     <string name="add_additional_email">+&#160;Add Additional Email</string>
     <string name="add">Add</string>
     <string name="delete_cross">&#160;X&#160;</string>
+    <string name="delete">Delete</string>
+    <string name="view_visit_report">View Visit Report</string>
 
     <string name="feedback">Feedback</string>
     <string name="feedback_choose_answer">Please select an answer to the survey</string>
