--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -583,21 +583,21 @@
     <string name="busy">Busy</string>
     <string name="you_must_chose_an_environment">You must chose an environment</string>
     <string name="please_provide_user_for_AmWell">Please provide a user for AmWell</string>
-    <string name="no_medical_conditions">No Medical Conditions found. \\n\\nWe could\'nt find any relevant results for </string>
-    <string name="no_medical_allergies">No Medical Allergies found. \\n\\nWe could\'nt find any relevant results for </string>
+    <string name="no_medical_conditions">No Medical Conditions found. \n\nWe could\'nt find any relevant results for </string>
+    <string name="no_medical_allergies">No Medical Allergies found. \n\nWe could\'nt find any relevant results for </string>
     <string name="visit_report_not_available">Visit report not available!</string>
     <string name="pulling_up_visit_summary_failed_message">Sorry, Pulling up visit summary has failed. Please try again at later time</string>
-    <string name="your_cost_is_not_free">Your cost isn\'t free\\nYou might want to apply a coupon...</string>
-    <string name="provider_unavailable">Provider unavailable \\nPlease select a different provider.</string>
+    <string name="your_cost_is_not_free">Your cost isn\'t free\nYou might want to apply a coupon...</string>
+    <string name="provider_unavailable">Provider unavailable \nPlease select a different provider.</string>
     <string name="unable_to_add_message">Sorry we are unable to add at this time.</string>
-    <string name="no_pharmacies_found_for">No Pharmacies found. \\n\\nWe could\'nt find any relevant results for</string>
-    <string name="no_pharmacies_found_for_current_location">No Pharmacies found. \\n\\nWe could\'nt find any relevant results near to your current location.</string>
+    <string name="no_pharmacies_found_for">No Pharmacies found. \n\nWe could\'nt find any relevant results for</string>
+    <string name="no_pharmacies_found_for_current_location">No Pharmacies found. \n\nWe could\'nt find any relevant results near to your current location.</string>
     <string name="no_amwell_token_found">No AmWell token found</string>
-    <string name="could_not_find_appointments_for_location">Couldn\'t find appointments for this location.\\nPlease try another office</string>
-    <string name="no_medications_found">No Medications found. \\n\\nWe could\'nt find any relevant results for</string>
-    <string name="error_saving_pharmacy">Error Saving Pharmacy\\n</string>
-    <string name="no_provider_is_available">No Provider is available.\\nPlease Try Again Later</string>
+    <string name="could_not_find_appointments_for_location">Couldn\'t find appointments for this location.\nPlease try another office</string>
+    <string name="no_medications_found">No Medications found. \n\nWe could\'nt find any relevant results for</string>
+    <string name="error_saving_pharmacy">Error Saving Pharmacy\n</string>
+    <string name="no_provider_is_available">No Provider is available.\n Please Try Again Later</string>
     <string name="is_not_available">is not available</string>
-    <string name="secure_lock_screen_has_not_setup"><![CDATA[Secure lock screen hasn\'t set up.\\n\" \"Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint]]></string>
+    <string name="secure_lock_screen_has_not_setup"><![CDATA[Secure lock screen hasn\'t set up.\n\" \"Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint]]></string>
     <string name="setting_to_fingerprint"><![CDATA[Go to \'Settings -> Security -> Fingerprint\' and register at least one fingerprint]]></string>
 </resources>
