completed # 29595: Provider Initiated Transfer Flow Implementation

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -437,7 +437,14 @@
 
     <!-- Add Credit Card -->
 
-    <!-- Waiting Room -->
+    <!-- Waiting Room Visit Transfer -->
+    <string name="visit_transfer">Visit Transfer</string>
+    <string name="visit_quick_transfer">Quick Transfer</string>
+    <string name="visit_transferred">You are being transferred</string>
+    <string name="you_are_next_patient">You are the Next Patient</string>
+    <string name="you_are_being_transferred">You are being transferred to another doctor.</string>
+    <string name="visit_transferred_waiting_for">Successfully transferred. \nYou are now waiting for</string>
+    <string name="continue_text">Continue</string>
 
 
     <!--IVR Activity-->
