--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -90,6 +90,7 @@
     <string name="first_name">First Name</string>
     <string name="preferred_name">Preferred Name</string>
     <string name="gender">Gender</string>
+    <string name="date_of_birth_no_format">Date of Birth</string>
     <string name="date_of_birth">Date of Birth (mm/dd/yyyy)</string>
     <string name="address">Address</string>
     <string name="address_2">Address 2</string>
