--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -625,7 +625,7 @@
     <string name="previous_day">Previous Day</string>
     <string name="next_day">Next Day</string>
     <string name="showing">showing</string>
-    <string name="suggestions_available">\n suggestions available, swipe to select</string>
+    <string name="suggestions_available"> suggestions available, swipe to select</string>
 
 
 </resources>
