--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -615,7 +615,9 @@
     <string name="could_not_find_appointments_for_location">Couldn\'t find appointments for this location.\nPlease try another office</string>
     <string name="no_medications_found">No Medications found. \n\nWe could\'nt find any relevant results for</string>
     <string name="error_saving_pharmacy">Error Saving Pharmacy\n</string>
-    <string name="no_provider_is_available">No Provider is available.\n Please Try Again Later</string>
+    <string name="no_provider_is_available">No Provider is available.\n Please try again later</string>
+    <string name="no_provider_is_available_with_specialty_try_later">No Provider is available with specialty.\nPlease try again later</string>
+    <string name="next_available_provider_is">Next available provider is</string>
     <string name="is_not_available">is not available</string>
     <string name="secure_lock_screen_has_not_setup"><![CDATA[Secure lock screen hasn\'t set up.\n\" \"Go to \'Settings -> Security -> Fingerprint\' to set up a fingerprint]]></string>
     <string name="setting_to_fingerprint"><![CDATA[Go to \'Settings -> Security -> Fingerprint\' and register at least one fingerprint]]></string>
