Bug Id 30275 : Accessibility v1.6.2 - Talkback - My care now  - Pharmacy - toast message disappears before it announces complete text is fixed. 1.Increased the toast time to support the accessibility toast reading time. 2.Removed the double line space given in the toast message. Please review this change.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -657,8 +657,8 @@
     <string name="provider_unavailable">Provider unavailable. \nPlease select a different provider.</string>
     <string name="provider_busy">Provider currently busy. \nPlease select a different provider.</string>
     <string name="unable_to_add_message">Sorry we are unable to add at this time.</string>
-    <string name="no_pharmacies_found_for">No Pharmacies found. \n\nWe could\'nt find any relevant results for</string>
-    <string name="no_pharmacies_found_for_current_location">No Pharmacies found. \n\nWe could\'nt find any relevant results near to your current location.</string>
+    <string name="no_pharmacies_found_for">No Pharmacies found. \nWe could\'nt find any relevant results for</string>
+    <string name="no_pharmacies_found_for_current_location">No Pharmacies found. \nWe could\'nt find any relevant results near to your current location.</string>
     <string name="no_amwell_token_found">No AmWell token found</string>
     <string name="could_not_find_appointments_for_location">Couldn\'t find appointments for this location.\nPlease try another office</string>
     <string name="no_medications_found">No Medications found. \n\nWe could\'nt find any relevant results for</string>
