--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">My Home</string>
     <string name="dev">Dev</string>
+    <string name="test">Test</string>
     <string name="stage">Stage</string>
     <string name="slot1">Slot1</string>
     <string name="prod">Prod</string>
