Fixed # 33307: Android-Accessibility v1.6.10 - Talkback - My care now  - INTAKE -  user is not  know to  "double tap to activate the privacy policy."

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -637,7 +637,7 @@
     <string name="mcn_welcome_text_variable">Hi %1$s, let’s fill out a few details to get you started.</string>
     <string name="location">Location, </string>
     <string name="phone_number_des">Phone number, </string>
-    <string name="phone_number_open_dialer">, Double tap to open dialer application</string>
+    <string name="phone_number_open_dialer">, Open dialer application</string>
     <string name="fav_selected">Remove doctor from favorites </string>
     <string name="fav_unselected">Add doctor to favorites list</string>
     <string name="provider_info">Provider Info</string>
