--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">My Home</string>
+    <string name="demo">Demo (Mocked)</string>
     <string name="dev">Dev</string>
     <string name="test">Test</string>
     <string name="stage">Stage</string>
