Bug Id : 31671 Accessibility - talkback v1.6.3- Book appointment - Personal information - all fields are not announced properly is fixed. 1. Full Screen focus removed. 2. Added label for every field in the screen. 3. Announcing numbers as individual digits for respective fields.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -682,6 +682,8 @@
     <string name="appointment_date">Appointment date</string>
     <string name="appointment_time">Appointment time</string>
     <string name="appointment_reason">Appointment reason</string>
+    <string name="purpose_of_your_visit">purpose of your visit</string>
+    <string name="state">state</string>
 
 
 </resources>
