--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -544,6 +544,7 @@
     <string name="pharmacies_list">Pharmacies List</string>
     <string name="visit_summary">Visit Summary</string>
 
+    <string name="email_count_max_reached">You have a maximum amount of 5 email addresses. Remove one to add another.</string>
     <string name="visit_summary_email_confidential">Email me a confidential summary</string>
     <string name="visit_summary_email_agree">I acknowledge I\'m sending confidential medical information through unsecure email</string>
     <string name="visit_summary_email_failed">Emailing visit summary failed</string>
