Bug Id : 34672 Accessibility - Android v 1.7.1 - More - settings - change password - Edit box should be announced in such a way screen readers should be able to understand is fixed

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -699,6 +699,9 @@
     <string name="appointment_reason">Appointment reason</string>
     <string name="purpose_of_your_visit">purpose of your visit</string>
     <string name="state">state</string>
+    <string name="existing_password">Existing Password</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_password">Confirm Password</string>
 
 
 </resources>
