Bug Id : 34663 Accessibility - Android v 1.7.1 - profile - phone number should announce as individual digits is fixed. Bug Id : 34662 Accessibility - Android v 1.7.1 - profile - should announce labels along with text is fixed.

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -702,6 +702,7 @@
     <string name="existing_password">Existing Password</string>
     <string name="new_password">New Password</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="full_name">Full Name</string>
 
 
 </resources>
