--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -487,7 +487,7 @@
     <!-- Waiting Room Visit Transfer -->
     <string name="visit_transfer">Visit Transfer</string>
     <string name="visit_quick_transfer">Quick Transfer</string>
-    <string name="you_are_next_patient">You are the Next Patient</string>
+    <string name="you_are_next_patient">You are the next patient</string>
 
     <string name="you_have_been_transferred">You have been transferred.</string>
     <string name="talk_to_someone_sooner">Talk to someone sooner.</string>
