Bug Id : 34655 Accessibility - Android v 1.7.1 - Talkback - Appointments -upcoming/Past - announcing as mon instead of monday in appointment details. Bug Id : 34656 Accessibility - Android v 1.7.1 - Talkback - Appointments -upcoming/Past - map button is unlabelled in appointment list Bug Id : 34658 Accessibility - Android v 1.7.1 - Talkback - Appointments -upcoming/Past - announcing details of appointments even though it navigates next page Bug Id : 34659 Accessibility - Android v 1.7.1 - Talkback - Appointments -upcoming/Past - Calendar, map , fav buttons are unlabelled. Bug Id : 34660 Accessibility - Android v 1.7.1 - Appointments -upcoming/Past - should announce reason for visit - fever Bug Id : 34661 Accessibility - Android v 1.7.1 - Appointments -upcoming/Past - remove focus to phone and share icons are fixed

--- a/MyHome/app/src/main/res/values/strings.xml
+++ b/MyHome/app/src/main/res/values/strings.xml
@@ -703,6 +703,7 @@
     <string name="new_password">New Password</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="full_name">Full Name</string>
-
+    <string name="doctor_name">Doctor Name</string>
+    <string name="hospital_name">Hospital Name</string>
 
 </resources>
